<resources>
    <string name="app_name">Amherst College Life</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="edit_message1"> Username </string>
    <string name="edit_message2"> Password </string>
    <string name="loginFail"> You have entered an incorrect username or password. You can try again or register. </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="Username" />
    <string name="Password" />
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
</resources>
